<resources>
    <string name="app_name">GoudaNough</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ALERT DIALOG STRINGS -->
    <string name="alert_positive"> Got it!</string>
    <string name="alert_negative">Nope!</string>
    <string name="alert_default_header">Gouda-Nuff</string>
    <string name="alert_default_content">Oops! Something went blue cheese bad</string>
    <string name="resto_info_name">Restaurant Name</string>
    <string name="resto_info_cuisine">Cuisine</string>
    <string name="resto_info_price_range">$$$$ $$$ $$ $</string>
    <string name="resto_info_url">https://www.restaurant.com/menu</string>
    <string name="resto_info_telephone">514-559-7108</string>
    <string name="resto_info_list_header">Reviews/Suggested Restaurants</string>

    <!-- TIP CALCULATOR-->
    <string name="total">Total per Person: </string>
    <string name="tip">Tip: </string>
    <string name="bill">Bill: </string>
    <string name="ten_perc">10%</string>
    <string name="fifteen_perc">15%</string>
    <string name="twenty_perc">20%</string>
    <string name="calc_tip">Calculate</string>
    <string name="people">People: </string>
    <string name="default_num_of_people">1</string>
</resources>
